...

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_vertical_margin">
        <RadioButton android:id="@+id/cs_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer_science"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/cs_bio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cs_bio"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/comp_eng_button"
            android:layout_width="wrap_content"
...
        android:textSize="18dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp"/>
    <Spinner
        android:id="@+id/college_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:spinnerMode="dropdown"
        android:entries="@array/college"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <Button android:id="@+id/buttonSubmitInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="submitInfo"
        android:enabled="false"
        android:layout_gravity="center_horizontal"/>
...
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="5dp">

        <Button android:id="@+id/buttonToCourseListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_view"
            android:onClick="showCourseList"
            android:enabled="false"
            android:layout_weight="0.5"/>

        <Button android:id="@+id/buttonToFourYearPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fyp"
            android:onClick="showFourYearPlan"
            android:enabled="false"
            android:layout_weight="0.5"/>
...
