...
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/course_detailed_text_description"
            android:textIsSelectable="true"
            android:text="Description: "
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="courseSetInterested"
            android:paddingTop="25dp"
            android:paddingLeft="10dp" />

        <Button android:id="@+id/button_cape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cape"
            android:onClick="showCape"
            android:layout_gravity="right"
            android:paddingTop="25dp" />
...
